# llm-benchmark

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
benchmark/: judge.py  report.py  runner.py  tasks.py  types.py
benchmark/models/: claude.py  ollama.py
docs/superpowers/plans/: 2026-06-17-llm-benchmark.md
docs/superpowers/specs/: 2026-06-17-llm-benchmark-design.md
results/: 20260618T081607.json  20260618T081607.md  20260618T135436.json  20260618T135436.md
tasks/: code.yaml  qa_pt.yaml  reasoning.yaml  summarization.yaml
tests/: test_cli.py  test_judge.py  test_report.py  test_runner.py  test_tasks.py
tests/models/: test_claude.py  test_ollama.py
